updated css and added layout > post-til

--- a/_posts/til/2021-08-19-tools.md
+++ b/_posts/til/2021-08-19-tools.md
@@ -1,10 +1,12 @@
 ---
-layout: default
-title: 21-08-21 뭔가
+layout: post-til
+title: 21-08-21 Markdown 스타일 가이드
 meta: test
 source: https://material.io/design/
 category: til
 ---
+
+[reference](https://gerrit.googlesource.com/gitiles/+/master/Documentation/markdown.md)
 
 # This is an <h1> tag
 ## This is an <h2> tag
