--- a/_posts/project/2021-08-19-cloud.md
+++ b/_posts/project/2021-08-19-cloud.md
@@ -1,9 +1,34 @@
 ---
 layout: post-til
-title: Jekyll로 Github 블로그 만들기
+title: Jekyll로 Github 블로그 만들기 (Updated 210820)
 meta: Evergreen (Updated 210820)
 source: https://material.io/design/
 category: project
 ---
 
 진행중
+## Do-List
+- [x] 최소한의 Prototype 완성
+- [ ] About 페이지 완성
+- [ ] CSS 업데이트
+- [ ] Reference 페이지 완성
+- [ ] Tag 기능 구현
+- [ ] Remark 기능 구현
+
+-
+## Markdown
+처음 사용해봤다. 블로그 포스트처럼 다양한 사람들이 낮은 진입장벽으로 스타일라이징을 할 수 있는거 같다.
+
+-
+## Jekyll 셋업에 도움이 된 리소스들
+### [Jekyll installation youtube by Thomas Bradley](https://www.youtube.com/watch?v=oiNVQ9Zjy4o&list=PLWjCJDeWfDdfVEcLGAfdJn_HXyM4Y7_k-)
+가장 기본적인 블로그 셋팅과 폴더 관리 방법을 어떤 강의들보다도 잘 보여주고 있다. 2015년도에 제작됬기에 최신 버전들과 호환이 되는지 잘 체크 해야했다. 특히 _gonfig.yml 셋팅에서 markdown을 kramdown으로 변경하여야 했다.
+
+### [Jekyll Doc](https://jekyllrb-ko.github.io/docs/installation/macos/)
+셋팅할때 위의 유투브와 병행해서 본 페이지이다. 특히 설치중 Gem::FilePermissionError 문제를 해결할 때 위의 문서를 참조하여 해결하였다.
+
+-
+## References
+Link: [Jekyll](https://jekyllrb.com/docs/)
+Link: [Markdown Syntax Guidance](https://guides.github.com/features/mastering-markdown/)
+
