--- a/_posts/til/2021-08-19-tools.md
+++ b/_posts/til/2021-08-19-tools.md
@@ -1,15 +1,12 @@
 ---
 layout: post-til
-title: 21-08-21 Markdown 스타일 가이드
+title: 21-08-22 Javascript Conditionals (조건문)
 meta: test
 source: https://material.io/design/
 category: til
 ---
+Javascript의 Conditionals에 대해 조금 더 깊이 파고 들었다. 이 글에서는 Javascipt를 사용하면서 자주 쓰이고 내가 자주 쉽게 잊어버리는 Operator와 예시들을 정리한다. 
 
-[reference](https://gerrit.googlesource.com/gitiles/+/master/Documentation/markdown.md)
-
-# This is an <h1> tag
-## This is an <h2> tag
-###### This is an <h6> tag
+## if(condition){}else{}
 
 ![A test image]({{site.baseurl}}/img/2021-08-19-1.jpg)
