--- a/_posts/project/2021-08-19-cloud.md
+++ b/_posts/project/2021-08-19-cloud.md
@@ -12,12 +12,21 @@ category: project
 - [ ] About 페이지 완성
 - [ ] CSS 업데이트
 - [ ] Reference 페이지 완성
+- [ ] 다음글 이전글 기능 구현
 - [ ] Tag 기능 구현
 - [ ] Remark 기능 구현
+- [ ] Search 기능 구현
+- [ ] SNS와 연동된 댓글기능
+- [ ] Mobile&Tablet 버전 추가
+
+## Markdown
+처음 사용해봤다. 확실히 CSS보다 꾸미는 시간을 단축할 수 있다. Github를 사용할 일이 많을 만큼 익숙해져도 손해없다고 생각한다.
 
 -
-## Markdown
-처음 사용해봤다. 블로그 포스트처럼 다양한 사람들이 낮은 진입장벽으로 스타일라이징을 할 수 있는거 같다.
+## 느낀점
+Github와 친해지고 간만에 코딩을 시작하기 위해 시작한 프로젝트인만큼 기초 골자가 완성되니까 성취감은 확실히 있다. Jekyll을 위한 템플렛도 있다고 하지만 일일히 입력하는 번거러움에 익숙해지는 것이 목적인만큼 필요하다고 생각되는 기능들을 조금씩 구현해가면서 블로깅을 할 생각이다.
+
+물론 유지보수하는데에 시간을 너무 잡아먹는다 싶으면 언제든지 다른 플렛폼으로 갈아탈 것이다. 기능구현은 일주일에 하루씩만 투자하자.
 
 -
 ## Jekyll 셋업에 도움이 된 리소스들
