--- a/_posts/project/2021-08-19-cloud.md
+++ b/_posts/project/2021-08-19-cloud.md
@@ -1,6 +1,6 @@
 ---
 layout: post-til
-title: Jekyll로 Github 블로그 만들기 (Updated 210820)
+title: Jekyll - Github 블로그 만들기 (Updated 210820)
 meta: Evergreen (Updated 210820)
 source: https://material.io/design/
 category: project
