added posts & updated css

--- a/_posts/project/2021-08-19-jekyll.md
+++ b/_posts/project/2021-08-19-jekyll.md
@@ -5,7 +5,9 @@ meta: Evergreen (Updated 210820)
 source: https://material.io/design/
 category: project
 ---
-
+```js
+    $ jekyll serve --watch --baseurl ""
+```
 진행중
 ## Do-List
 - [x] 최소한의 Prototype 완성
