--- a/_posts/react-native/21-09-01-axios.md
+++ b/_posts/react-native/21-09-01-axios.md
@@ -60,3 +60,7 @@ class Home extends React.Component{
 ```
 
 
+### 웹 브라우저로 API data 확인
+`https://api.openweathermap.org/data/2.5/weather?lat=37&lon=122&appid=ca3f1b9673fa1a16714d616face9034e`
+
+### [@expo/vector-icons@12.0.5](https://icons.expo.fyi/)
