--- a/_posts/react-native/21-09-01-axios.md
+++ b/_posts/react-native/21-09-01-axios.md
@@ -5,13 +5,18 @@ meta: React-Router
 source: https://www.npmjs.com/package/axios
 category: react_native
 ---
-[doc](https://www.npmjs.com/package/axios) 
+API에 활용하는 툴 중 하나인 axios를 사용한 예시를 적어놓았다. 
+
+## Install axios
+Documentation: [npmjs.com](https://www.npmjs.com/package/axios) 
 ```js
 $ npm install axios
 ```
 
 ## React 영화 웹 
+API from [YTS Proxy](https://github.com/serranoarevalo/yts-proxy). [API endpoint list](https://yts.mx/api)
 
+For the endpoint [`/list_movies.json`](https://yts.mx/api#list_movies) use `https://yts-proxy.now.sh/list_movies.json`
 
 ```js
 import axios from 'axios';
@@ -59,8 +64,54 @@ class Home extends React.Component{
 };
 ```
 
+### Weather app
+API from [openweather](https://openweathermap.org/api)
+```js
+import * as Location from 'expo-location';
 
-### 웹 브라우저로 API data 확인
-`https://api.openweathermap.org/data/2.5/weather?lat=37&lon=122&appid=ca3f1b9673fa1a16714d616face9034e`
+export default class extends React.Component {
+  state = {
+    isLoading: true
+  };
+  getWeather = async(latitude, longitude) => {
+    const { 
+      data: {
+        main: { temp },
+        weather
+      }  
+    } = await axios.get(
+      `http://api.openweathermap.org/data/2.5/weather?lat=${latitude}&lon=${longitude}&appid=${API_KEY}&units=metric`
+      );//es6
+    console.log(weather);
+    this.setState({ 
+      isLoading:false, 
+      condition: weather[0].main,
+      temp,
+     });
+  }
+  getLocation = async() => {
+    try{
+      await Location.requestForegroundPermissionsAsync();
+      const {
+        coords: {latitude, longitude}
+      } = await Location.getCurrentPositionAsync();
+      // send to APT and get weather;
+      this.getWeather(latitude, longitude)
+    } catch(error) {
+      Alert.alert("Cannot find you");
+    }
 
-### [@expo/vector-icons@12.0.5](https://icons.expo.fyi/)
+  }
+  componentDidMount(){
+    this.getLocation()
+  }
+  render(){
+    const { isLoading, temp, condition } = this.state;
+    return isLoading ? <Loading /> : <Weather 
+    temp={Math.round(temp)} 
+    condition={condition}
+    />
+  }
+}
+```
+expo-cli에서 latitude와 longitude를 얻어서 openweather API에 입력함으로써 현재 내 위치의 날씨 정보를 가져온다.
