--- a/_posts/project/2021-08-19-jekyll.md
+++ b/_posts/project/2021-08-19-jekyll.md
@@ -1,45 +1,40 @@
 ---
 layout: post-til
-title: Jekyll - Github 블로그 만들기 (Updated 210820)
+title: Jekyll - Github 블로그 만들기 (processing)
 meta: Evergreen (Updated 210820)
 source: https://material.io/design/
 category: project
 ---
 ```js
-    $ jekyll serve --watch --baseurl ""
+$ jekyll serve --watch --baseurl ""
 ```
 진행중
-## Do-List
+### Do-List
 - [x] 최소한의 Prototype 완성
 - [ ] About 페이지 완성
 - [ ] CSS 업데이트
 - [ ] Reference 페이지 완성
 - [ ] 다음글 이전글 기능 구현
 - [ ] Tag 기능 구현
-- [ ] Remark 기능 구현
+- [ ] ~~Remark 기능 구현~~ (불필요)
 - [ ] Search 기능 구현
-- [ ] SNS와 연동된 댓글기능
+- [ ] ~~SNS와 연동된 댓글기능~~ (불필요)
 - [ ] Mobile&Tablet 버전 추가
 
-## Markdown
+### Markdown
 처음 사용해봤다. 확실히 CSS보다 꾸미는 시간을 단축할 수 있다. Github를 사용할 일이 많을 만큼 익숙해져도 손해없다고 생각한다.
 
--
-## 느낀점
+[Markdown Syntax Guidance](https://guides.github.com/features/mastering-markdown/)
+
+
+### Jekyll 셋업에 도움이 된 리소스들
+
+- **[Jekyll installation youtube by Thomas Bradley](https://www.youtube.com/watch?v=oiNVQ9Zjy4o&list=PLWjCJDeWfDdfVEcLGAfdJn_HXyM4Y7_k-)**: 
+가장 기본적인 블로그 셋팅과 폴더 관리 방법을 어떤 강의들보다도 잘 보여주고 있다. 2015년도에 제작됬기에 최신 버전들과 호환이 되는지 잘 체크 해야했다. 특히 _gonfig.yml 셋팅에서 markdown을 kramdown으로 변경하여야 했다.
+- **[Jekyll Doc](https://jekyllrb-ko.github.io/docs/installation/macos/)**: 셋팅할때 위의 유투브와 병행해서 본 페이지이다. 특히 설치중 Gem::FilePermissionError 문제를 해결할 때 위의 문서를 참조하여 해결하였다.
+- **[Jekyll.com](https://jekyllrb.com/docs/)**: 세세한 셋팅 및 유지 관리 방법을 잘 설명해주고 있다.
+
+### 느낀점
 Github와 친해지고 간만에 코딩을 시작하기 위해 시작한 프로젝트인만큼 기초 골자가 완성되니까 성취감은 확실히 있다. Jekyll을 위한 템플렛도 있다고 하지만 일일히 입력하는 번거러움에 익숙해지는 것이 목적인만큼 필요하다고 생각되는 기능들을 조금씩 구현해가면서 블로깅을 할 생각이다.
 
 물론 유지보수하는데에 시간을 너무 잡아먹는다 싶으면 언제든지 다른 플렛폼으로 갈아탈 것이다. 기능구현은 일주일에 하루씩만 투자하자.
-
--
-## Jekyll 셋업에 도움이 된 리소스들
-### [Jekyll installation youtube by Thomas Bradley](https://www.youtube.com/watch?v=oiNVQ9Zjy4o&list=PLWjCJDeWfDdfVEcLGAfdJn_HXyM4Y7_k-)
-가장 기본적인 블로그 셋팅과 폴더 관리 방법을 어떤 강의들보다도 잘 보여주고 있다. 2015년도에 제작됬기에 최신 버전들과 호환이 되는지 잘 체크 해야했다. 특히 _gonfig.yml 셋팅에서 markdown을 kramdown으로 변경하여야 했다.
-
-### [Jekyll Doc](https://jekyllrb-ko.github.io/docs/installation/macos/)
-셋팅할때 위의 유투브와 병행해서 본 페이지이다. 특히 설치중 Gem::FilePermissionError 문제를 해결할 때 위의 문서를 참조하여 해결하였다.
-
--
-## References
-Link: [Jekyll](https://jekyllrb.com/docs/)
-Link: [Markdown Syntax Guidance](https://guides.github.com/features/mastering-markdown/)
-
