updated css & upload new post

--- a/_posts/react-native/21-09-01-axios.md
+++ b/_posts/react-native/21-09-01-axios.md
@@ -1,5 +1,5 @@
 ---
-layout: post-til
+layout: post-base
 title: axios를 사용한 API 연동 
 meta: React-Router
 source: https://www.npmjs.com/package/axios
@@ -64,7 +64,7 @@ class Home extends React.Component{
 };
 ```
 
-### Weather app
+## Weather app
 API from [openweather](https://openweathermap.org/api)
 ```js
 import * as Location from 'expo-location';
