--- a/_posts/trouble-shoot/2021-09-02-design.md
+++ b/_posts/trouble-shoot/2021-09-02-design.md
@@ -1,5 +1,5 @@
 ---
-layout: post-til
+layout: post-base
 title: Missing write access error when using npm
 meta: test
 source: https://flaviocopes.com/npm-fix-missing-write-access-error/
