added posts & updated CSS

--- a/_posts/project/2021-08-19-jekyll.md
+++ b/_posts/project/2021-08-19-jekyll.md
@@ -26,15 +26,14 @@ $ jekyll serve --watch --baseurl ""
 
 [Markdown Syntax Guidance](https://guides.github.com/features/mastering-markdown/)
 
-
-## Jekyll 셋업에 도움이 된 리소스들
-
-- **[Jekyll installation youtube by Thomas Bradley](https://www.youtube.com/watch?v=oiNVQ9Zjy4o&list=PLWjCJDeWfDdfVEcLGAfdJn_HXyM4Y7_k-)**: 
+## Resource
+* [Jekyll installation youtube by Thomas Bradley](https://www.youtube.com/watch?v=oiNVQ9Zjy4o&list=PLWjCJDeWfDdfVEcLGAfdJn_HXyM4Y7_k-): 
 가장 기본적인 블로그 셋팅과 폴더 관리 방법을 어떤 강의들보다도 잘 보여주고 있다. 2015년도에 제작됬기에 최신 버전들과 호환이 되는지 잘 체크 해야했다. 특히 _gonfig.yml 셋팅에서 markdown을 kramdown으로 변경하여야 했다.
-- **[Jekyll Doc](https://jekyllrb-ko.github.io/docs/installation/macos/)**: 셋팅할때 위의 유투브와 병행해서 본 페이지이다. 특히 설치중 Gem::FilePermissionError 문제를 해결할 때 위의 문서를 참조하여 해결하였다.
-- **[Jekyll.com](https://jekyllrb.com/docs/)**: 세세한 셋팅 및 유지 관리 방법을 잘 설명해주고 있다.
+* [Jekyll Doc](https://jekyllrb-ko.github.io/docs/installation/macos/): 셋팅할때 위의 유투브와 병행해서 본 페이지이다. 특히 설치중 Gem::FilePermissionError 문제를 해결할 때 위의 문서를 참조하여 해결하였다.
+* [Jekyll.com](https://jekyllrb.com/docs/): 세세한 셋팅 및 유지 관리 방법을 잘 설명해주고 있다.
+* 태그기능은 [Egypt on Rails 유투브](https://www.youtube.com/watch?v=nEnN-bjDt6c)에서 참조중
 
-## 느낀점
+## Conclusion
 Github와 친해지고 간만에 코딩을 시작하기 위해 시작한 프로젝트인만큼 기초 골자가 완성되니까 성취감은 확실히 있다. Jekyll을 위한 템플렛도 있다고 하지만 일일히 입력하는 번거러움에 익숙해지는 것이 목적인만큼 필요하다고 생각되는 기능들을 조금씩 구현해가면서 블로깅을 할 생각이다.
 
 물론 유지보수하는데에 시간을 너무 잡아먹는다 싶으면 언제든지 다른 플렛폼으로 갈아탈 것이다. 기능구현은 일주일에 하루씩만 투자하자.
