updated CSS & posts

--- a/_posts/project/2021-08-19-jekyll.md
+++ b/_posts/project/2021-08-19-jekyll.md
@@ -5,10 +5,13 @@ meta: Evergreen (Updated 210820)
 source: https://material.io/design/
 category: project
 ---
+Jekyll은 Liquid syntax 기반의 웹 프레임워크이다. 유지관리에 용이하고 코드 커스터마이징 자유도도 상당히 넓다. 포스팅을 `.md`로 사용할 수 있는 것이 매력적이다.
+
+이 블로그는 Evergreen 프로젝트로 무언가 계속 추가되거나 삭제될 예정이다.
 ```js
 $ jekyll serve --watch --baseurl ""
 ```
-진행중
+
 ## Do-List
 - [x] 최소한의 Prototype 완성
 - [ ] About 페이지 완성
@@ -21,10 +24,13 @@ $ jekyll serve --watch --baseurl ""
 - [ ] ~~SNS와 연동된 댓글기능~~ (불필요)
 - [ ] Mobile&Tablet 버전 추가
 
-## Markdown
-처음 사용해봤다. 확실히 CSS보다 꾸미는 시간을 단축할 수 있다. Github를 사용할 일이 많을 만큼 익숙해져도 손해없다고 생각한다.
+## [Markdown](https://guides.github.com/features/mastering-markdown/)
+CSS보다 글 꾸미는 시간을 단축할 수 있다. Github를 사용할 일이 많을 것이라 예상되는 만큼 익숙해져도 손해없다고 생각한다.
 
-[Markdown Syntax Guidance](https://guides.github.com/features/mastering-markdown/)
+## 사용하면서 느껴지는 한계점들
+* Code block 안에서 react native 코드들이 일부 누락됬다. Liquid syntax와 일부 코드 충돌 때문으로 확인되었다.
+* jlottie와의 연동이 불안하다. `autoplay: false`가 누락된다. 
+
 
 ## Resource
 * [Jekyll installation youtube by Thomas Bradley](https://www.youtube.com/watch?v=oiNVQ9Zjy4o&list=PLWjCJDeWfDdfVEcLGAfdJn_HXyM4Y7_k-): 
