--- a/_posts/trouble-shoot/2021-09-02-design.md
+++ b/_posts/trouble-shoot/2021-09-02-design.md
@@ -1,6 +1,6 @@
 ---
 layout: post-base
-title: Missing write access error when using npm
+title: NPM - Missing write access error when using npm
 meta: test
 source: https://flaviocopes.com/npm-fix-missing-write-access-error/
 category: troubleShoot
