--- a/_posts/project/2021-08-19-jekyll.md
+++ b/_posts/project/2021-08-19-jekyll.md
@@ -2,7 +2,7 @@
 layout: post-base
 title: Jekyll - Github 블로그 만들기 (processing)
 meta: Evergreen (Updated 210820)
-source: https://material.io/design/
+source: https://idratherbewriting.com/documentation-theme-jekyll/index.html
 category: project
 ---
 Jekyll은 Liquid syntax 기반의 웹 프레임워크이다. 유지관리에 용이하고 코드 커스터마이징 자유도도 상당히 넓다. 포스팅을 `.md`로 사용할 수 있는 것이 매력적이다.
