--- a/_posts/html/21-09-24-color.md
+++ b/_posts/html/21-09-24-color.md
@@ -1,8 +1,17 @@
 ---
 layout: post-base
-title: CSS - Color 참조 리스트
+title: CSS - Color & design resources
 meta: Color references
 category: htmlAndCss
 ---
+## Resources for color 
+* https://www.december.com/html/spec/colorhsl.html
+* https://color.adobe.com/ko/create
+* https://uigradients.com/#Moonrise
+* https://color.cloudflare.design/
 
-https://www.december.com/html/spec/colorhsl.html
+
+## Accessibility
+* **red-green**, where users have a difficult time differentiating between the red and green colors.
+* **blue-yellow**, where the blues tend to appear greener
+* **monochromatic**, when users can’t see color at all.
