change: on naming

--- a/_posts/html/2021-10-05-layout.md
+++ b/_posts/html/2021-10-05-layout.md
@@ -1,8 +1,8 @@
 ---
 layout: post-base
-title: 21-10-05 HTML&CSS - 레이아웃
-meta: 레이아웃
-category: til
+title: CSS/ 자주 쓰는 position과 display
+meta: 레이아웃 짤때 자주 사용하는 position과 display
+category: htmlAndCss
 ---
 * `position`
 * `display`
