--- a/_posts/project/2021-08-19-jekyll.md
+++ b/_posts/project/2021-08-19-jekyll.md
@@ -1,6 +1,6 @@
 ---
 layout: post-base
-title: _Project/ Jekyll/ Github 블로그 만들기 (Evergreen)
+title: Project / Jekyll / Github 블로그 만들기 (Evergreen)
 meta: Evergreen (Updated 210820)
 category: projects
 ---
