Add: two new posts cra setting & data transfer in react

--- a/_posts/project/2021-08-19-jekyll.md
+++ b/_posts/project/2021-08-19-jekyll.md
@@ -31,7 +31,7 @@ Jekyll은 Liquid syntax 기반의 웹 프레임워크이다. 구축과 유지관
 CSS보다 글 꾸미는 시간을 단축할 수 있다. Github를 사용할 일이 많을 것이라 예상되는 만큼 익숙해져도 손해없다고 생각한다.
 
 ## 사용하면서 느껴지는 한계점들
-* Code block 안에서 react native 코드들이 일부 누락됬다. Liquid syntax와 일부 코드 충돌 때문으로 확인되었다.
+* ~~Code block 안에서 react native 코드들이 일부 누락됬다.~~ => {% raw %}{% endraw %}로 해결
 * jlottie와의 연동이 불안하다. `autoplay: false`가 누락된다. 
 
 
