modifed: Post Markdownlint;)

--- a/_posts/project/2021-08-19-jekyll.md
+++ b/_posts/project/2021-08-19-jekyll.md
@@ -4,14 +4,17 @@ title: Project / Jekyll / Github 블로그 만들기 (Evergreen)
 meta: Evergreen (Updated 210820)
 category: projects
 ---
-_Everything is getting better little by little_
+>_Everything is getting better little by little_
 
-Github 블로그 만들기는 개인 에버그린 프로젝트이다. 블로깅 목적은 **나의 경험을 바탕으로 개인적이고 실험적인 데이터베이스를 만드는 것을 목적으로 기록**하기이다. 추후 업데이트들은 방향에 맞추는 것을 항상 명심하자. 
+Github 블로그 만들기는 개인 에버그린 프로젝트이다. 블로깅 목적은 **나의 경험을 바탕으로 개인적이고 실험적인 데이터베이스를 만드는 것을 목적으로 기록**하기이다. 추후 업데이트들은 방향에 맞추는 것을 항상 명심하자.
+
+```bash
+jekyll serve --watch --baseurl ""
 
 ```
-$ jekyll serve --watch --baseurl ""
-```
+
 ## Do-List
+
 - [x] 최소한의 Prototype 완성
 - [x] About 페이지 완성
 - [ ] Mobile&Tablet 버전 추가
@@ -25,22 +28,30 @@ $ jekyll serve --watch --baseurl ""
 - [ ] ~~SNS와 연동된 댓글기능~~ (불필요)
 
 ## Jekyll
+
 Jekyll은 Liquid syntax 기반의 웹 프레임워크이다. 구축과 유지관리 난이도는 쉽지 않으나 그에 맞는 자유도가 상당히 넓다. `.md`를 이용한 포스트 관리는 상당히 매력적인거 같다.
 
 ## [Markdown](https://guides.github.com/features/mastering-markdown/)
+
 CSS보다 글 꾸미는 시간을 단축할 수 있다. Github를 사용할 일이 많을 것이라 예상되는 만큼 익숙해져도 손해없다고 생각한다.
 
-## 사용하면서 느껴지는 한계점들
-* ~~Code block 안에서 react native 코드들이 일부 누락됬다.~~ => {% raw %}{% endraw %}로 해결
-* jlottie와의 연동이 불안하다. `autoplay: false`가 누락된다. 
+- [Markdown showcase](https://stackedit.io/app#)
+- [daringfireball](https://daringfireball.net/projects/markdown/syntax)
 
+- [CommonMark](https://commonmark.org/help/)
+- [Adam Pritchard](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet)
+
+## 사용하면서 느껴지는 한계점들
+
+- ~~Code block 안에서 react native 코드들이 일부 누락됬다.~~ => `{\% raw %}{\% endraw %} //'\'삭제해서 사용하기`로 해결
+
+- jlottie와의 연동이 불안하다. `autoplay: false`가 누락된다.
 
 ## Resource
-* [Jekyll installation youtube by Thomas Bradley](https://www.youtube.com/watch?v=oiNVQ9Zjy4o&list=PLWjCJDeWfDdfVEcLGAfdJn_HXyM4Y7_k-): 
+
+- [Jekyll installation youtube by Thomas Bradley](https://www.youtube.com/watch?v=oiNVQ9Zjy4o&list=PLWjCJDeWfDdfVEcLGAfdJn_HXyM4Y7_k-):
 가장 기본적인 블로그 셋팅과 폴더 관리 방법을 어떤 강의들보다도 잘 보여주고 있다. 2015년도에 제작됬기에 최신 버전들과 호환이 되는지 잘 체크 해야했다. 특히 _gonfig.yml 셋팅에서 markdown을 kramdown으로 변경하여야 했다.
-* [Jekyll Doc](https://jekyllrb-ko.github.io/docs/installation/macos/): 셋팅할때 위의 유투브와 병행해서 본 페이지이다. 특히 설치중 Gem::FilePermissionError 문제를 해결할 때 위의 문서를 참조하여 해결하였다.
-* [Jekyll.com](https://jekyllrb.com/docs/): 세세한 셋팅 및 유지 관리 방법을 잘 설명해주고 있다.
-* 태그기능은 [Egypt on Rails 유투브](https://www.youtube.com/watch?v=nEnN-bjDt6c)에서 참조중
 
-
-
+- [Jekyll Doc](https://jekyllrb-ko.github.io/docs/installation/macos/): 셋팅할때 위의 유투브와 병행해서 본 페이지이다. 특히 설치중 Gem::FilePermissionError 문제를 해결할 때 위의 문서를 참조하여 해결하였다.
+- [Jekyll.com](https://jekyllrb.com/docs/): 세세한 셋팅 및 유지 관리 방법을 잘 설명해주고 있다.
+- 태그기능은 [Egypt on Rails 유투브](https://www.youtube.com/watch?v=nEnN-bjDt6c)에서 참조중
