--- a/_posts/trouble-shoot/2021-09-02-design.md
+++ b/_posts/trouble-shoot/2021-09-02-design.md
@@ -6,7 +6,7 @@ source: https://flaviocopes.com/npm-fix-missing-write-access-error/
 category: troubleShoot
 ---
 ```js
-$ sudo chown -R $USER /usr/local/lib/node_modules
+sudo chown -R $USER /usr/local/lib/node_modules
 ```
 
 Let’s break it down:
@@ -22,4 +22,3 @@ And the final piece is the folder path.
 Running this path will make the folder yours, so you can safely run your `npm install -g <package>` commands!
 
 Pay attention to the folder listed by the error message. If it’s different, update the `chown` command accordingly.
-
