--- a/_posts/trouble-shoot/2021-10-18-React101-uuid.md
+++ b/_posts/trouble-shoot/2021-10-18-React101-uuid.md
@@ -8,7 +8,7 @@ category: troubleShoot
 
 `import uuid from "uuid"`를 아래의 코드로 바꾸면 된다.
 
-```
+```bush
 import {v1 as uuid} from "uuid"; 
 // import {v3 as uuid} from "uuid"; 
 // import {v4 as uuid} from "uuid"; 
@@ -37,6 +37,6 @@ class App extends React.Component{
 }
 ```
 
-
 ## Resource
+
 - [Stack Overflow](https://stackoverflow.com/questions/60830848/attempted-import-error-uuid-does-not-contain-a-default-export-imported-as-u) 답변
