--- a/_posts/algorithm/2021-10-24-algorithm-3.md
+++ b/_posts/algorithm/2021-10-24-algorithm-3.md
@@ -39,7 +39,7 @@ const getPrefix = (strs) => {
 ```js
 let strs1 = ['s', 'stop', 'stoar'];
 let strs2 = ['woriu', 'world', 'worlost', 'w'];
-let strs3 = ['stonefacebook', 'stonefacebookholder', 'stonefacebookcold', 'stonefacebookhello'];
+let strs3 = ['extracurricular', 'extraservice', 'extraordinary', 'extramood'];
 let strs4 = [];
 let strs5 = ['stone', 'stoar', 'step'];
 let strs6 = ['hi', 'bro', 'sup'];
