Modified: examples on algorithm-3

--- a/_posts/algorithm/2021-10-24-algorithm-3.md
+++ b/_posts/algorithm/2021-10-24-algorithm-3.md
@@ -37,12 +37,12 @@ const getPrefix = (strs) => {
 ## 테스트를 위해 사용한 배열들
 
 ```js
-let strs1 = ['s', 'stop', 'stoar'];
-let strs2 = ['woriu', 'world', 'worlost', 'w'];
+let strs1 = ['preorder', 'prefix'];
+let strs2 = ['rewrite', 'reset', 'redo', 'restart'];
 let strs3 = ['extracurricular', 'extraservice', 'extraordinary', 'extramood'];
 let strs4 = [];
-let strs5 = ['stone', 'stoar', 'step'];
-let strs6 = ['hi', 'bro', 'sup'];
+let strs5 = ['coexist', 'decode', 'infield'];
+let strs6 = ['mistake', 'misunderstand', 'misfire'];
 ```
 
 배열 양끝에 한 글자로 시작하는 공통된 글자를 가진 배열, 빈 배열 등등 다양한 상황을 상정하여 만들었다.
