Add - new posts - tags on posts(it appears, but not working for now) - seconds counting on About.html
Modified
- css on page information on pages

Removed
- nocontent posts(move all resources information to test.html)

--- a/_posts/html/2021-09-22-html-table-1.md
+++ b/_posts/html/2021-09-22-html-table-1.md
@@ -2,7 +2,6 @@
 layout: post-base
 title: HTML / table
 meta: Table example
-source: https://content.codecademy.com/courses/learn-html-tables/index.html
 category: htmlAndCss
 ---
 아래는 table 예시이다. 헷갈릴때 복기하자.
@@ -45,3 +44,8 @@ category: htmlAndCss
     
 </table>
 ```
+
+## Resource
+
+- [Code Academy](https://content.codecademy.com/courses/learn-html-tables/index.html)
+
