--- a/_posts/project/2021-08-19-jekyll.md
+++ b/_posts/project/2021-08-19-jekyll.md
@@ -3,6 +3,7 @@ layout: post-base
 title: Project / Jekyll / Github 블로그 만들기 (Evergreen)
 meta: Evergreen (Updated 210820)
 category: projects
+tags: [Jekyll, Project, Evergreen]
 ---
 >_Everything is getting better little by little_
 
