--- a/_posts/algorithm/2021-10-24-algorithm-3.md
+++ b/_posts/algorithm/2021-10-24-algorithm-3.md
@@ -46,3 +46,26 @@ let strs6 = ['mistake', 'misunderstand', 'misfire'];
 ```
 
 배열 양끝에 한 글자로 시작하는 공통된 글자를 가진 배열, 빈 배열 등등 다양한 상황을 상정하여 만들었다.
+
+---
+
+## 눈이 편안한 코드 리뷰
+
+```js
+
+const getPrefix = (strs) => {
+    let prefix = strs[0];    
+    if(strs.length === 0){	 
+        prefix = "";
+    }
+    for(let i=1; i<strs.length; i++){            
+        while(strs[i].indexOf(prefix) !== 0){               
+            prefix = prefix.substring(0, prefix.length-1)
+        }
+    }
+    return prefix;
+}
+
+```
+
+`while`, `indexOf` 그리고 `substring`
