Add: new two posts Modified: tags, titles on posts Modified: css for code block Removed: unused html and post(moved whole content to test.html)

--- a/_posts/design/2021-09-24-css-color.md
+++ b/_posts/design/2021-09-24-css-color.md
@@ -1,8 +1,8 @@
 ---
 layout: post-base
-title: CSS / Color resources
+title: Design / Color
 meta: Color references
-category: htmlAndCss
+category: HTMLnCSS
 ---
 ## Resources for color
 
