--- a/_posts/html/2021-10-05-layout.md
+++ b/_posts/html/2021-10-05-layout.md
@@ -1,8 +1,9 @@
 ---
 layout: post-base
-title: CSS / 자주 쓰는 position과 display
-meta: 레이아웃 짤때 자주 사용하는 position과 display
-category: htmlAndCss
+title: Position과 Display
+meta: 레이아웃 짤 때 자주 사용하는 position과 display
+category: HTMLnCSS
+tags: [CSS]
 ---
 * `position`
 * `display`
