--- a/_posts/react/2021-08-23-R-Github.md
+++ b/_posts/react/2021-08-23-R-Github.md
@@ -1,11 +1,10 @@
 ---
 layout: post-base
-title: React / Github에 연동하기 (Web)
-meta: React-Router
-category: ReactAndReactNative
+title: React 프로젝트와 Github에 호스팅하기
+meta: 리엑트 작업 환경 세팅하기
+category: React
+tags: [React, Github]
 ---
-과거 처음 React를 사용했을때 github와 연동하는 법을 몰라서 [Codesandbox](https://codesandbox.io/)라는 곳에다 연동시켜 시연한적이 있었다. 그때 알았으면 좋았을걸 하는 마음에 정리한다.
-
 ## Setup
 
 React 프로젝트의 터미널에서 다음과 입력하기
