--- a/_posts/til/2021-10-24-React-key.md
+++ b/_posts/til/2021-10-24-React-key.md
@@ -1,8 +1,9 @@
 ---
 layout: post-base
-title: 21-10-24 React / map 함수 적용시 key props를 부여하는 이유
+title: map 함수 적용시 key props를 부여하는 이유
 meta: 리엑트에서 키 값의 용도
-category: til
+category: React
+tags: [React]
 ---
 Key는 React가 어떤 항목을 변경, 추가 또는 삭제할지 식별하는 것을 돕습니다. key는 엘리먼트에 안정적인 고유성을 부여하기 위해 배열 내부의 엘리먼트에 지정해야 합니다. _출처 - [React documentation: 리스트와 Key](https://ko.reactjs.org/docs/lists-and-keys.html)_
 
