--- a/_posts/html/2021-09-22-html-table-1.md
+++ b/_posts/html/2021-09-22-html-table-1.md
@@ -1,8 +1,9 @@
 ---
 layout: post-base
-title: HTML / table
+title: Table
 meta: Table example
-category: htmlAndCss
+category: HTMLnCSS
+tags: [HTML]
 ---
 아래는 table 예시이다. 헷갈릴때 복기하자.
 
