--- a/_posts/html/2021-09-26-css-grid.md
+++ b/_posts/html/2021-09-26-css-grid.md
@@ -1,8 +1,9 @@
 ---
 layout: post-base
-title: CSS / Grid
-meta: Color references
-category: htmlAndCss
+title: Grid
+meta: 그리드
+category: HTMLnCSS
+tags: [HTML, CSS]
 ---
 <https://css-tricks.com/snippets/css/complete-guide-grid/>
 
