Add: Design category Modified: css for typography and line height Removed: unused html

--- a/_posts/design/2021-09-24-css-color.md
+++ b/_posts/design/2021-09-24-css-color.md
@@ -1,20 +1,23 @@
 ---
 layout: post-base
-title: Design / Color
-meta: Color references
-category: HTMLnCSS
+title: Color
+meta: 개발을 위한 디자인 리소스
+category: Design
+tags: [Design]
 ---
-## Resources for color
-
-* <https://www.december.com/html/spec/colorhsl.html>
-* <https://color.adobe.com/ko/create>
-* <https://uigradients.com/#Moonrise>
-* <https://color.cloudflare.design/>
 
 ## Accessibility
 
-* **red-green**, where users have a difficult time differentiating between the red and green colors.
-* **blue-yellow**, where the blues tend to appear greener
-* **monochromatic**, when users can’t see color at all.
+- **red-green**, where users have a difficult time differentiating between the red and green colors.
+- **blue-yellow**, where the blues tend to appear greener
+- **monochromatic**, when users can’t see color at all.
+
+## Resources
+
+- <https://www.december.com/html/spec/colorhsl.html>
+- <https://color.adobe.com/ko/create>
+- <https://uigradients.com/#Moonrise>
+- <https://color.cloudflare.design/>
+
 
 ---
