Refactor: updated writings in post, added link to github on navigation bar

--- a/_posts/project/2021-11-12-React-pj.md
+++ b/_posts/project/2021-11-12-React-pj.md
@@ -1,7 +1,7 @@
 ---
 layout: post-base
-title: Like / 회고 1 - Overview
-meta: 나이키 클론 프로젝트 회고
+title: Like / Retrospect 1 - Overview
+meta: 나이키 클론 프로젝트 회고 개요
 category: projects
 tags: [React, Project]
 source: http://wecode26likeproject.s3-website.ap-northeast-2.amazonaws.com/
@@ -12,16 +12,15 @@ source: http://wecode26likeproject.s3-website.ap-northeast-2.amazonaws.com/
 - **프런트 엔드**: 신유진, 임연수, 전지완
 - **백 엔드**: 김봉철, 이지은
 
-나이키 클론 프로젝트.
 개발 초기 세팅부터 전부 직접 구현했으며, 실제 사용할 수 있는 서비스 수준으로 개발하는 것을 목표로 라이키 팀원들과 즐겁게 작업한 1차 프로젝트입니다.
 
-## 스택
+## Tech stack
 
 - **Front-End** : HTML5, SASS, React, AWS S3
 - **Back-End** : Python, Django, MySQL, jwt, bcypt, AWS EC2, Redis
 - **Common** : Git, Github, Slack, Trello, Postman
 
-## 링크
+## Links
 
 - [웹 사이트](http://wecode26likeproject.s3-website.ap-northeast-2.amazonaws.com/)
 - [시연 영상](https://drive.google.com/file/d/1TyeGsUcogieXJmMcxchkl2-tk5qylNw8/view?usp=sharing)
@@ -30,41 +29,35 @@ source: http://wecode26likeproject.s3-website.ap-northeast-2.amazonaws.com/
 - [Trello](https://trello.com/b/b9cKMX5x/like-%ED%8C%80)
 - [API 설계](https://www.notion.so/LIKE-34de3722ecbe46eabcd5669789a499b1)
 
-## 구현 기능
+## 구현된 화면과 기능들
 
-#### 신유진
+### 신유진
 
-로그인 & 회원가입
+#### 로그인 & 회원가입
 
 - 로그인 모달 구현
 - 로그인과 회원기입 유효성 검사 로직구현
 
-&nbsp;
+### 임연수
 
-#### 임연수
-
-네비게이션
+#### 네비게이션
 
 - 카테고리 데이터를 이용하여 네비게이션의 메뉴명과 서브메뉴명 업데이트
 
-상세페이지 / 리뷰 아코디언
+#### 상세페이지 / 리뷰 아코디언
 
 - 사이즈별 선택시 해당 사이즈의 최대 수량 업데이트
 - 리뷰 별점 표기 가능
 
-미니장바구니 / 장바구니페이지 / 주문내역페이지
+#### 미니장바구니 / 장바구니페이지 / 주문내역페이지
 
 - `GET`, `POST`, `DELETE`로 백엔드와 통신 구현
 
-&nbsp;
+### 전지완
 
-#### 전지완
-
-메인 페이지
+#### 메인 페이지
 
 - 쿼리를 이용한 카테고리 필터 기능 구현
-
-&nbsp;
 
 ## 4. 결과물
 
@@ -95,6 +88,12 @@ source: http://wecode26likeproject.s3-website.ap-northeast-2.amazonaws.com/
 ### 주문조회
 
 <img width="1440" alt="Screen Shot 2021-11-13 at 2 32 39 PM" src="https://user-images.githubusercontent.com/22067260/141607195-163b8458-bfae-41a8-9f60-6c1732d00bb6.png">
+
+## 소감
+
+프론트 엔드와 백 엔드가 연계되어 하나의 웹사이트를 구현하는 과정을 경험한 첫번째 프로젝트였다. 제일 기억에 남는 코드는 상세페이지에 사이즈 주문 수량 체크하는 부분이었다. 이 기능을 구현하면 리엑트가 선언형이라는 대한 전반적인 이해를 할 수 있었다.
+
+>_수 많은 프로젝트를 해왔지만 이 팀처럼 성과와 함께 분위기가 좋은 팀은 정말 드물었다. 봉철, 유진, 지완, 지은님 최고의 행운이 함께하길 빌어요:)_
 
 ## Resource
 
