added: new post

--- a/_posts/trouble-shoot/2021-12-11-recapcha.md
+++ b/_posts/trouble-shoot/2021-12-11-recapcha.md
@@ -1,9 +1,10 @@
 ---
 layout: post-base
-title: setting localhost url for reCAPTCHA
+title: setting reCAPTCHA domain for localhost
 meta: 리캡차에 개발용 로컬 호스트 등록하기
 source: https://www.google.com/recaptcha/about/
 category: troubleShoot
+tags: [reCAPTCHA]
 ---
 
-domain에 `localhost`를 등록하면 되었다. 
+Add `localhost` on the domain list.
