--- a/_posts/trouble-shoot/2021-12-11-zoom.md
+++ b/_posts/trouble-shoot/2021-12-11-zoom.md
@@ -1,8 +1,9 @@
 ---
 layout: post-base
-title: CSS / zoom
+title: css / zoom
 meta: 넓이 1024에서 1550 사이의 디자인이 없어서 1500 사이즈를 1024로 줄여서 사용해야 했다.
 category: troubleShoot
+tags: [html, css]
 ---
 
 I miss 1024px design for product, but I have 1550px. The best way to resovle for showing clients.
