--- a/_posts/css/2021-12-02-css-li+li.md
+++ b/_posts/css/2021-12-02-css-li+li.md
@@ -1,7 +1,7 @@
 ---
 layout: post-base
-title: object-fit cover
-meta: 이미지 핏
+title: li + li
+meta: 사이 간격
 category: css
 tags: [css]
 ---
@@ -9,6 +9,13 @@ tags: [css]
 ```css
 li + li::before {
       content: '|';
+      padding-right: 0.5rem;
+      padding-left: 0.5rem;
+    }
+```
+
+```css
+.ttreeree + .ttreeree {
       padding-right: 0.5rem;
       padding-left: 0.5rem;
     }
