Added: new posts

--- a/_posts/firebase/2021-12-23-firebase-3.md
+++ b/_posts/firebase/2021-12-23-firebase-3.md
@@ -1,6 +1,6 @@
 ---
 layout: post-base
-title: React / Firebase 1 basic setting
+title: React / Firebase 3 SignIn
 meta: 파이어 베이스 시작하기
 source: https://firebase.google.com/docs
 category: firebase
