Modified: Revision in wecode review

--- a/_posts/common/22-01-04-wecode-26.md
+++ b/_posts/common/22-01-04-wecode-26.md
@@ -10,7 +10,7 @@ tags: [common]
 
 기업협업을 포함하여 3개월 상당의 기간 12월 24일 수료완료.
 
-코딩도 코딩이지만 초중고, 군대와 같이 여러 사람들이 섞여서 같은 목적으로 무언가를 배운 특이한 경험이었다. 나에게는 다양한 사람들과 만나서 무언가를 했다는 것이 포인트였던거 같다. 번아웃 회복기의 나에게는 이분들의 열정과 행동력은 많은 영감을 주었다.
+코딩도 코딩이지만 초중고, 군대와 같이 여러 사람들이 섞여서 같은 목적으로 무언가를 배운 특이한 경험이었다. 나에게는 다양한 사람들과 만나서 무언가를 했다는 것이 포인트였던거 같다. 번아웃으로 의욕이 없는 상태에서 회복 중인 나에게는 이분들의 열정과 행동력은 많은 영감을 주었다.
 
 ## 호빵맨 상
 
@@ -18,9 +18,9 @@ tags: [common]
 
 수료식 날에 동료를 많이 도와준 수료자에게 주는 호빵맨 상도 받았다. 상 받는 기준은 수료자들이 작성한 설문조사 기준이다. 백엔드에 재원님이 수상할 줄 알았지만 나중에 백엔드의 동기들에게도 물어보니까 내가 월등하게 많이 도와줬다고 한다... (별로 그런거 같지는 않은데...)
 
-기술분야 특성은 나눠주면 줄수록 내가 더 이득이다. 실제로 입밖으로 다른 분들에게 도움을 주면서 개념과 해결책을 같이 생각하면서 오히려 내 머릿속이 정리가 되고 나중에 있던 프로젝트에서 생긴 문제점들을 자연스럽게 해결할 수 있었다. 그리고 1, 2차 프로젝트의 모든 프로젝트에 도움을 주었으니까 나름 10개가 넘는 다른 컨벤션과 로직을 경험하게 된것이다.
+기술분야 특성은 나눠주면 줄수록 내가 더 이득이다. 실제로 입밖으로 다른 분들에게 도움을 주면서 개념과 해결책을 같이 생각하면서 오히려 내 머릿속이 정리가 된다. 또한 다른 동기들을 도와주면서 10개가 넘는 프로젝트의 컨벤션과 로직을 경험하게 된것이다. 이 경험은 후에 있던 내 프로젝트에서 생긴 문제점들을 자연스럽게 해결할 수 있었다.
 
-이런 맥락에서 나를 다른 분들에게 떼어주면 오히려 강해지니까 호빵맨은 머리를 떼어주면 힘이 약해지니까 호빵맨 상 네이밍은 개선의 여지가 필요하다.
+이런 맥락에서 나를 다른 분들에게 떼어주면 오히려 강해지니까 호빵맨은 머리를 떼어주면 힘이 약해지는 호빵맨 상 네이밍은 개선의 여지가 필요하다.
 
 ![DSC01694](https://user-images.githubusercontent.com/22067260/148090317-4da6902c-5af9-4501-9a04-ed67e8dba100.JPG)
 
@@ -32,10 +32,12 @@ tags: [common]
 
 2개월의 배움과 1개월의 기업협업이 가장 큰 장점이라고 생각한다. 좋던 싫던 그냥 그게 개발 환경과 문화를 알 수 있는 기준점이 되었다.
 
+내가 기술협업을 갔던 환경과 사람은 좋았다. 하지만 기업 리스트에 기재된 기술스택이 실제 회사있을 때 사용한 기술이 달랐고 새로
+
 ## 위코드 단점
 
-부트캠프는 프로그래밍에 실제로 현업에서 사용하는 실용적이고 엄격한 코딩 위주이다. 그러므로 영어, 게임을 좋아하던가, 체계적이고 메커니즘에 분야 혹은 관련 분야에서 온 분들에겐 괜찮지만 완전히 비관련분야에서 온 사람들에게는 여전히 높은 진입장벽이다. 어쩔 수 없는 부분이지만 이 어쩔 수 없는 부분에 대한 대안이 그닥 없는 전형적인 저점은 높고 고점은 낮은 방식이다. 단기적으로는 취업에 성공했겠지만 장기적으로 봤을때는 몇명이나 얼마만큼 계속 깊게 갈지는 개인적으로 궁금할 따름이다.
+부트캠프는 실제로 현업에서 사용하는 실용적이고 엄격한 코딩 위주이다. 그러므로 영어, 게임을 좋아하던가, 체계적이고 메커니즘에 분야 혹은 관련 분야에서 온 분들에겐 괜찮지만 완전히 비관련분야에서 온 사람들에게는 여전히 높은 진입장벽이다. 어쩔 수 없는 부분이지만 이 어쩔 수 없는 부분에 대한 대안이 명확하지 않은 전형적인 저점은 높고 고점은 낮은 방식이다. 단기적으로는 취업에 성공했겠지만 장기적으로 봤을때는 몇명이나 얼마만큼 계속 깊게 가며 개발 커뮤니티에 선순환을 줄지는 개인적으로 궁금할 따름이다.
 
 ## 후기
 
-취업 목적의 프로그래밍 언어 방향, 다른 개발자 지망생들과의 프로젝트 이는 매우 값지고 비싼 경험이었다. 이 글을 쓸때도 아직도 번아웃 상태의 나에겐 최적이었다. 위코드에서 만났던 모든 분들이 자신이 원하는 삶을 살아갔으면 좋겠다.
+취업 목적의 프로그래밍 언어 방향, 다른 개발자 지망생들과의 프로젝트 이는 매우 값지고 비싼 경험이었다. 위코드에서 만났던 모든 분들이 자신이 원하는 삶을 살아갔으면 좋겠다.
