Refactor: categories convention

--- a/_posts/project/2021-08-19-jekyll.md
+++ b/_posts/project/2021-08-19-jekyll.md
@@ -2,7 +2,7 @@
 layout: post-base
 title: Jekyll / Github 블로그 만들기 (Evergreen)
 meta: Evergreen (Updated 210820)
-category: projects
+category: Projects
 tags: [Jekyll, Project, Evergreen]
 ---
 >_Everything is getting better little by little_
@@ -11,7 +11,6 @@ Github 블로그 만들기는 개인 에버그린 프로젝트이다. 블로깅 
 
 ```bash
 jekyll serve --watch --baseurl ""
-
 ```
 
 ## Do-List
@@ -25,7 +24,7 @@ jekyll serve --watch --baseurl ""
 - [ ] 다음글 이전글 기능 구현
 - [ ] Tag 기능 구현
 - [ ] ~~Remark 기능 구현~~ (불필요)
-- [ ] Search 기능 구현
+- [x] Search 기능 구현
 - [ ] ~~SNS와 연동된 댓글기능~~ (불필요)
 
 ## Jekyll
