--- a/_posts/trouble-shoot/2021-09-02-design.md
+++ b/_posts/trouble-shoot/2021-09-02-design.md
@@ -3,7 +3,7 @@ layout: post-base
 title: NPM / Missing write access error when using npm
 meta: test
 source: https://flaviocopes.com/npm-fix-missing-write-access-error/
-category: troubleShoot
+category: TroubleShoot
 ---
 ```js
 sudo chown -R $USER /usr/local/lib/node_modules
