--- a/_posts/trouble-shoot/2021-10-18-React101-uuid.md
+++ b/_posts/trouble-shoot/2021-10-18-React101-uuid.md
@@ -2,7 +2,7 @@
 layout: post-base
 title: React / 'uuid' does not contain a default export (imported as 'uuid') 
 meta: uuid 사용시 문제
-category: troubleShoot
+category: TroubleShoot
 ---
 공식문서는 [https://www.npmjs.com/package/uuid](https://www.npmjs.com/package/uuid)에서 확인가능하다.
 
