--- a/_posts/trouble-shoot/2021-12-11-recapcha.md
+++ b/_posts/trouble-shoot/2021-12-11-recapcha.md
@@ -3,7 +3,7 @@ layout: post-base
 title: setting reCAPTCHA domain for localhost
 meta: 리캡차에 개발용 로컬 호스트 등록하기
 source: https://www.google.com/recaptcha/about/
-category: troubleShoot
+category: TroubleShoot
 tags: [reCAPTCHA]
 ---
 
