--- a/_posts/trouble-shoot/2021-12-11-zoom.md
+++ b/_posts/trouble-shoot/2021-12-11-zoom.md
@@ -2,7 +2,7 @@
 layout: post-base
 title: css / zoom
 meta: 넓이 1024에서 1550 사이의 디자인이 없어서 1500 사이즈를 1024로 줄여서 사용해야 했다.
-category: troubleShoot
+category: TroubleShoot
 tags: [html, css]
 ---
 
