--- a/_posts/algorithm/2021-10-24-algorithm-3.md
+++ b/_posts/algorithm/2021-10-24-algorithm-3.md
@@ -3,7 +3,7 @@ layout: post-base
 title: Algorithm / Code Kata / W1D5 공통된 시작 글자 구하기
 meta: 위코드 코드카타 1주 5일차 문제 리뷰
 source: https://www.a11yproject.com/
-category: algorithm
+category: Algorithm
 tags: [Javascript, Algorithm]
 ---
 `strs`은 단어가 담긴 배열입니다. 공통된 시작 단어(prefix)를 반환해주세요.
