--- a/_posts/css/2021-09-26-css-grid.md
+++ b/_posts/css/2021-09-26-css-grid.md
@@ -2,7 +2,7 @@
 layout: post-base
 title: Grid
 meta: 그리드
-category: css
+category: Css
 tags: [HTML, CSS]
 ---
 <https://css-tricks.com/snippets/css/complete-guide-grid/>
