Refactor: Posts convention

--- a/_posts/javascript/2021-11-30-promise.md
+++ b/_posts/javascript/2021-11-30-promise.md
@@ -15,9 +15,9 @@ source: https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Asynchronous/P
 const examplePromise = () => {
   return new Promise((resolve, reject) => {
     if (true) {
-      setTimeout( () => resolve('success'), 3000);
+      setTimeout(() => resolve("success"), 3000);
     } else {
-      setTimeout( () => resolve('failed'), 5000);
+      setTimeout(() => resolve("failed"), 5000);
     }
   });
 };
@@ -28,14 +28,22 @@ const examplePromise = () => {
 ### True or False: promise1 and promise2 both produce the same output.
 
 ```js
-const examplePromise1 = new Promise((resolve, reject) => { reject('Uh-oh!') });
-const examplePromise2 = new Promise((resolve, reject) => { reject('Uh-oh!') });
- 
-const onFulfill = value => {console.log(value)};
-const onReject = reason => {console.log(reason)};
- 
+const examplePromise1 = new Promise((resolve, reject) => {
+  reject("Uh-oh!");
+});
+const examplePromise2 = new Promise((resolve, reject) => {
+  reject("Uh-oh!");
+});
+
+const onFulfill = (value) => {
+  console.log(value);
+};
+const onReject = (reason) => {
+  console.log(reason);
+};
+
 const promise1 = examplePromise1.then(onFulfill, onReject);
- 
+
 const promise2 = examplePromise2.then(onFulfill).catch(onReject);
 ```
 
@@ -52,17 +60,21 @@ const example = new Promise( ? ? ? );
 ### What is the value of the argument that is passed to the `onReject()`?
 
 ```js
-let onFulfill = value => {console.log(value)};
-let onReject = reason => {console.log(reason)};
- 
-const promise =  new Promise( (resolve, reject) => {
+let onFulfill = (value) => {
+  console.log(value);
+};
+let onReject = (reason) => {
+  console.log(reason);
+};
+
+const promise = new Promise((resolve, reject) => {
   if (false) {
-    resolve('success value');
+    resolve("success value");
   } else {
     reject();
   }
 });
- 
+
 promise.then(onFulfill, onReject);
 ```
 
@@ -71,27 +83,27 @@ promise.then(onFulfill, onReject);
 ### What will be printed to the console after running the code provided?
 
 ```js
-let link = state => {
-  return new Promise(function(resolve, reject) {
-    if (state) { 
-      resolve('success'); 
-    } else { 
-      reject('error');
+let link = (state) => {
+  return new Promise(function (resolve, reject) {
+    if (state) {
+      resolve("success");
+    } else {
+      reject("error");
     }
   });
-}
- 
+};
+
 let promiseChain = link(true);
- 
+
 promiseChain
-.then( data => {  
-   console.log(data + " 1");
-   return link(true);
-})
-.then( data => {
-   console.log(data+ " 2");
-   return link(true);
-});
+  .then((data) => {
+    console.log(data + " 1");
+    return link(true);
+  })
+  .then((data) => {
+    console.log(data + " 2");
+    return link(true);
+  });
 ```
 
 => Success 1 Success 2
